<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of LAN Discoverer for Android.

 LAN Discoverer is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 LAN Discoverer is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with LAN Discoverer.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
	<!-- General -->
	<string name="app_name">LAN Discoverer</string>

	<!-- Splash Screen -->
	<string name="splash_loading">Loading...</string>
	<string name="splash_failed_dialog_error">Error...</string>
    <string name="splash_failed_dialog_msg">Could not enable wifi. Exiting...</string>
    <string name="splash_failed_dialog_ok_button">OK</string>
    <string name="splash_ask_dialog_title">Enable wifi?</string>
    <string name="splash_ask_dialog_msg">This program needs the wifi to be enabled. Would you like to enable it now?</string>
    <string name="splash_ask_dialog_yes_button">Yes</string>
    <string name="splash_ask_dialog_no_button">No</string>

	<!-- Main Activity -->
	<string name="main_listview_header">LAN machines:</string>
	<string name="main_start_button">Start discovery</string>
	<string name="main_stop_button">Stop discovery</string>
	<string name="main_enable_wifi">Please enable wifi...</string>

	<!-- Main Menu -->
	<string name="main_menu_preferences">Preferences</string>

	<!-- Preference keys and defaults -->
	<string name="prefs_keys_ping_timeout">PREFS_PING_TIMEOUT</string>
	<string name="prefs_defs_ping_timeout">2</string>
	<string name="prefs_keys_max_threads">PREFS_MAX_THR</string>
	<string name="prefs_defs_max_threads">10</string>
	<string name="prefs_keys_clear">PREFS_CLEAR</string>

	<!-- Preferences -->
	<string name="preferences_ping_timeout_title">Ping timeout</string>
	<string name="preferences_ping_timeout_summary">Select how long to wait for a ping response (Seconds)</string>
	<string name="preferences_max_threads_title">Maximum threads</string>
	<string name="preferences_max_threads_summary">How many parallel checks do you want?</string>
	<string name="preferences_clear_title">Clear preferences</string>
	<string name="preferences_clear_summary">Restore default preference values</string>

	<!-- Errors -->
	<string name="error_not_numerical_value">The value you\'ve entered is not numerical. Using default one.</string>

</resources>
