<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of LAN Discoverer for Android.

 LAN Discoverer is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 LAN Discoverer is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with LAN Discoverer.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
    		android:summary="@string/preferences_ping_timeout_summary"
    		android:key="@string/prefs_keys_ping_timeout"
    		android:defaultValue="@string/prefs_defs_ping_timeout"
    		android:dialogTitle="@string/preferences_ping_timeout_title"
    		android:dialogMessage="@string/preferences_ping_timeout_summary"
    		android:title="@string/preferences_ping_timeout_title" />
    <EditTextPreference
    		android:summary="@string/preferences_max_threads_summary"
    		android:key="@string/prefs_keys_max_threads"
    		android:defaultValue="@string/prefs_defs_max_threads"
    		android:dialogTitle="@string/preferences_max_threads_title"
    		android:dialogMessage="@string/preferences_max_threads_summary"
    		android:title="@string/preferences_max_threads_title" />
    <Preference
    		android:title="@string/preferences_clear_title"
    		android:summary="@string/preferences_clear_summary"
    		android:key="@string/prefs_keys_clear" />		
</PreferenceScreen>
